--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,15 @@ bin/
 gen/
 out/
 
-# Gradle files
+
+### Gradle files ###
+#App
 .gradle/
 build/
+#joketeller library
+joketeller/build/
+
+
 
 # Local configuration file (sdk path, etc)
 local.properties
