--- a/joketeller/build.gradle
+++ b/joketeller/build.gradle
@@ -16,6 +16,9 @@ repositories {
     jcenter()
 }
 
+sourceCompatibility = 1.7
+
+
 dependencies {
     // The production code uses Guava
     compile 'com.google.guava:guava:20.0'
