--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.google.android.gms:play-services-ads:10.0.1'
+    compile project(path: ':joketeller')
 }
