--- a/jokedisplay/build.gradle
+++ b/jokedisplay/build.gradle
@@ -1,16 +1,17 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.udacity.gradle.builditbigger"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -18,21 +19,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-
-    productFlavors{
-        free {
-            applicationId "com.udacity.gradle.builditbigger.free"
-
-        }
-        paid {
-            applicationId "com.udacity.gradle.builditbigger.paid"
-        }
-    }
-
-
-
-
 }
 
 dependencies {
@@ -41,6 +27,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.google.android.gms:play-services-ads:10.0.1'
-    compile project(path: ':joketeller')
+    testCompile 'junit:junit:4.12'
+    compile project(path: ':app')
 }
