add new library to host global constants across the app refactor other libraries

--- a/jokedisplay/src/main/AndroidManifest.xml
+++ b/jokedisplay/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application
         android:name="com.udacity.gradle.builditbigger."
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:label="@string/app_name"
         android:supportsRtl="true">
 
