--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
-    <!-- android:name=".GlobalConstatnts" provides acces to global constants -->
+    <!-- android:name=".GlobalConstatnts" provides access to global constants -->
+    <!--tools:replace="android:allowBackup"-->
+
     <application
-        android:name=".GlobalConstatnts"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
