got the joke displaying activity to work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -20,7 +20,7 @@ android {
     }
 
 
-    productFlavors{
+    productFlavors {
         free {
             applicationId "com.udacity.gradle.builditbigger.free"
 
@@ -31,8 +31,6 @@ android {
     }
 
 
-
-
 }
 
 dependencies {
@@ -40,9 +38,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.google.android.gms:play-services-ads:10.0.1'
     compile project(path: ':joketeller')
     compile project(path: ':utility')
     compile project(path: ':jokedisplay')
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.google.android.gms:play-services-ads:10.0.1'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile project(path: ':jokebackend', configuration: 'android-endpoints')
 }
