--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,24 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.udacity.gradle.builditbigger">
 
-    <!-- Include required permissions for Google Mobile Ads to run-->
+    <!-- Include required permissions for Google Mobile Ads to run -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <!-- android:name=".GlobalConstatnts" provides access to global constants -->
-    <!--tools:replace="android:allowBackup"-->
-
+    <!-- tools:replace="android:allowBackup" -->
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <!--This meta-data tag is required to use Google Play Services.-->
+
+        <!-- This meta-data tag is required to use Google Play Services. -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -30,7 +30,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--Include the AdActivity configChanges and theme. -->
+
+        <!-- Joke displaying activity -->
+        <activity android:name="jokedisplay.JokeDisplayActivity" />
+
+        <!-- TODO fix the configchnages below.  Bad practice included in the starter code -->
+        <!-- Include the AdActivity configChanges and theme. -->
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
