--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':joketeller', ':jokedisplay', ':utility'
+include ':app', ':joketeller', ':jokedisplay', ':utility', ':jokebackend'
