--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    //resolve gradle conflict
+    androidTestCompile 'com.android.support:support-annotations:25.2.0'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+
+
+
+
 }
