add paid flavor structure fix app-level build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,15 +38,12 @@ dependencies {
     compile project(path: ':joketeller')
     compile project(path: ':utility')
     compile project(path: ':jokedisplay')
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.google.android.gms:play-services-ads:10.2.0'
-    compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':jokebackend', configuration: 'android-endpoints')
 
-    compile ('com.google.api-client:google-api-client-android:1.22.0') {
+    compile('com.google.api-client:google-api-client-android:1.22.0') {
         exclude module: 'httpclient'
     }
-    compile ('com.google.http-client:google-http-client-gson:1.22.0') {
+    compile('com.google.http-client:google-http-client-gson:1.22.0') {
         exclude module: 'httpclient'
     }
 
@@ -54,13 +51,20 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    //resolve gradle conflict
+
+    //COMPILE DEPENDENCIES
+
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.google.android.gms:play-services-ads:10.2.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+
+
+    //TESTING DEPENDENCIES
+
+    //resolve gradle conflict by including latest annotations
     androidTestCompile 'com.android.support:support-annotations:25.2.0'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-
-
-
-
 }
