--- a/app/src/paid/AndroidManifest.xml
+++ b/app/src/paid/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application>
-        <activity android:name="com.udacity.gradle.builditbigger.paid.MainActivity"></activity>
+    <application android:label="@string/app_name">
+
+        <activity android:name="com.udacity.gradle.builditbigger.MainActivity"></activity>
+
     </application>
 </manifest>
