--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     //COMPILE DEPENDENCIES
 
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.google.android.gms:play-services-ads:10.2.0'
+    freeCompile 'com.google.android.gms:play-services-ads:10.2.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
 
