--- a/app/src/free/AndroidManifest.xml
+++ b/app/src/free/AndroidManifest.xml
@@ -2,7 +2,13 @@
     package="com.udacity.gradle.builditbigger">
 
     <application>
-        android:label="@string/app_name"
+        <!-- TODO fix the configchnages below.  Bad practice included in the starter code -->
+        <!-- Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+
     </application>
 
 </manifest>
