--- a/app/src/paid/AndroidManifest.xml
+++ b/app/src/paid/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:label="@string/app_name">
-
         <activity android:name="com.udacity.gradle.builditbigger.MainActivity"></activity>
+        <!-- Joke displaying activity -->
+        <activity android:name="jokedisplay.JokeDisplayActivity" />
 
-    </application>
 </manifest>
