--- a/app/src/paid/AndroidManifest.xml
+++ b/app/src/paid/AndroidManifest.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-package="com.udacity.gradle.builditbigger">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.udacity.gradle.builditbigger">
 
-<!-- Include required permissions for Google Mobile Ads to run -->
-<uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Include required permissions for Google Mobile Ads to run -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-<!-- android:name=".GlobalConstatnts" provides access to global constants -->
-<!-- tools:replace="android:allowBackup" -->
-<application
-    android:allowBackup="false"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/AppTheme"
-    tools:ignore="GoogleAppIndexingWarning">
+    <!-- android:name=".GlobalConstatnts" provides access to global constants -->
+    <!-- tools:replace="android:allowBackup" -->
+    <application
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
 
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-                <intent-filter>
-                        <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                        <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
-        <activity android:name="jokedisplay.JokeDisplayActivity" />
+        <activity
+            android:name="jokedisplay.JokeDisplayActivity"
+            android:parentActivityName=".MainActivity" />
 
 
-</application>
+    </application>
 
 </manifest>
