--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,26 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+    androidTestCompile project(path:  ":jokebackend")
+
+}
+
+
+task runGceTests {
+    doFirst(){
+        println("starting GCE dev server")
+        project(":jokebackend").appengineRun
+    }
+
+    doLast{
+        println("Testing...")
+        project(":app").deviceAndroidTest
+    }
+
+    doLast{
+        println("stopping GCE dev server")
+        project(":jokebackend").appengineStop
+    }
+
+
 }
